# cylves

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CODING_STANDARDS.md  GAP_ANALYSIS.md  Makefile  PHASED_IMPLEMENTATION.md  README.md
.github/workflows/: ci.yml
.kiro/specs/sylves-c-port/: design.md  requirements.md  tasks.md
doc/: bounds_interface_implementation.md  bounds_system_complete.md
src/: CMakeLists.txt  COMPLETION_REPORT_SECTION_16.md  Doxyfile  README.md  test_lazy_grid_demo.c  test_periodic_mesh  test_periodic_mesh.c  test_planar_lazy  test_planar_lazy.c  test_planar_lazy_vis  test_planar_lazy_vis.c  test_simple_viz  test_simple_viz.c  test_visualization  test_visualization.c  test_voronoi_lazy_grid  test_voronoi_lazy_grid.c
src/cmake/: sylvesConfig.cmake.in
src/completed/: completed-tasks.md
src/doc/: pathfinding_implementation.md
src/src/: aabb.c  aabb_bound.c  astar_pathfinding.c  bfs_pathfinding.c  bijection_modifier.c  bounds.c  cache.c  cell_outlining.c  cell_type.c  connection.c  conway_operators.c  cube_cell_type.c  cube_grid.c  delaunay.c  dijkstra_pathfinding.c  dual_mesh_builder.c  errors.c  geometry_utils.c  grid.c  grid_defaults.c  grid_modifier.c  hash.c  hex_grid.c  hex_grid_internal.h  hex_prism_cell_type.c  hex_rotation.c  jittered_square_grid.c  mask_bound.c  mask_modifier.c  matrix.c  memory.c  memory_pool.c  mesh_data.c  mesh_emitter.c  mesh_export.c  mesh_grid.c  mesh_raycast.c  mesh_utilities.c  nested_modifier.c  ngon_prism_cell_type.c  (+25 more)
src/src/bounds/: cube_bound.c
src/src/deformation/: deformation.c  deformation_utils.c  quad_interpolation.c  quad_interpolation.c.bak  triangle_interpolation.c
src/src/include/sylves/: aabb.h  aabb_bound.h  bijection_modifier.h  bounds.h  cache.h  cell.h  cell_type.h  connection.h  conway_operators.h  cube_cell_type.h  cube_grid.h  deformation.h  deformation_utils.h  delaunay.h  dual_mesh_builder.h  errors.h  export.h  geometry_utils.h  grid.h  grid_modifier.h  hash.h  hex_grid.h  hex_prism_cell_type.h  hex_rotation.h  jittered_square_grid.h  mask_bound.h  mask_modifier.h  matrix.h  memory.h  memory_pool.h  mesh.h  mesh_data.h  mesh_emitter.h  mesh_export.h  mesh_grid.h  mesh_utilities.h  nested_modifier.h  ngon_prism_cell_type.h  pathfinding.h  periodic_planar_mesh_grid.h  (+27 more)
src/src/internal/: bound_internal.h  cell_type_internal.h  grid_defaults.h  grid_internal.h
src/tests/: CMakeLists.txt  test_cache.c  test_cell_type.c  test_cell_type_square.c  test_core.c  test_core_types.c  test_grid_bounds_integration.c  test_hex_grid.c  test_memory_pool.c  test_mesh_export.c  test_pathfinding.c  test_spatial_index.c  test_square_bounds.c  test_svg_export.c  test_sylves.c  test_triangle_grid.c
